--- a/build.gradle
+++ b/build.gradle
@@ -30,9 +30,14 @@ dependencies {
     compile group: 'org.thymeleaf', name: 'thymeleaf-spring4', version: '3.0.9.RELEASE'
     compile group: 'nz.net.ultraq.thymeleaf', name: 'thymeleaf-layout-dialect', version: '2.3.0'
 
+    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.11'
+
+    compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.3'
+
     compile group: 'javax.interceptor', name: 'javax.interceptor-api', version: '1.2.2'
     providedCompile group: 'javax.enterprise', name: 'cdi-api', version: '2.0.SP1'
 
     compile group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
     compile group: 'org.hibernate', name: 'hibernate-validator', version: '6.0.10.Final'
+
 }
